Closed Bug 792506 Opened 13 years ago Closed 13 years ago

AutoMounter should not allow UMS to be disabled while USB cable is plugged in

Categories

(Firefox OS Graveyard :: General, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: dhylands, Assigned: dhylands)

References

Details

Attachments

(1 file, 1 obsolete file)

Since attempting to disable UMS fails on many devices (especially non-samsung ones) while the USB cable is plugged in, the AutoMounter should just disallow it. If UMS is currently enabled and the USB cable is plugged in, then it should change attempts to disable to be "disable when unplugged".
Attach the correct patch.
Attachment #662828 - Attachment is obsolete: true
Attachment #662828 - Flags: review?(kyle)
Attachment #662829 - Flags: review?(kyle)
Attachment #662829 - Flags: review?(kyle) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: