Bug 792506 -  AutoMounter should not allow UMS to be disabled while USB cable is plugged in. r=qDot